fix login alignment and top level pathname bug

--- a/z2-material/src/jsMain/resources/css/z2-material/shorthand-general.css
+++ b/z2-material/src/jsMain/resources/css/z2-material/shorthand-general.css
@@ -47,6 +47,10 @@
     height: 100%
 }
 
+.justify-content-center {
+    justify-content: center;
+}
+
 .justify-content-end {
     justify-content: flex-end;
 }
